<resources>
    <string name="app_name">优分享浏览器</string>
    <string name="app_name_inner">优分享浏览器</string>
    <string name="backward">后退</string>
    <string name="forward">前进</string>
    <string name="prev_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="chapter_select">章节</string>
    <string name="full_screen">全屏</string>
    <string name="last_tab_not_close">不能关闭最后一个标签</string>
    <string name="back">返回</string>
    <string name="back_to_home">返回到桌面</string>
    <string name="last_img_not_del">不能删除最后一张图片</string>
    <string name="undo">撤消</string>
    <string name="redo">重做</string>
    <string name="add_text_node">添加</string>
    <string name="publish">发布</string>
    <string name="preview">预览</string>
    <string name="view">文章</string>
    <string name="setting_about_description">发现并分享</string>
    <string name="all_rights_reserved">Copyright © 2016 优分享浏览器 All Rights Reserved. </string>
    <string name="app_server_view">登陆参数配置</string>
    <string name="app_server_config_error_tips">请先进行登陆参数配置</string>
    <string name="confirm_down">确定下载该文件?</string>
    <string name="confirm_down_prefix">确定下载:\n</string>
    <string name="confirm">确认</string>
    <string name="pic_user">用户图片</string>
    <string name="add_friend">加朋友</string>
    <string name="add_focus">关注</string>
    <string name="user_info">用户信息</string>
    <string name="confirm_delete">确认删除</string>
    <string name="download">下载</string>
    <string name="download_start">下载开始</string>
    <string name="download_finish">下载完成</string>
    <string name="browser_add_bookmark">添加书签</string>
    <string name="copy_to_clicpboard_succ">已复制到剪贴板</string>
    <string name="browser_bookmark">书签</string>
    <string name="browser_history">历史</string>
    <string name="modifyfavorites">修改书签</string>
    <string name="deletefavorites">删除书签</string>
    <string name="deletehistory">删除历史</string>
    <string name="deleteAllHistory">清空历史</string>
    <string name="chapter">章节</string>
    <string name="modify_name">改名</string>
    <string name="browser_refresh">刷新</string>
    <string name="clip_board_empty">剪切板为空</string>
    <string name="open_link_not_url">粘贴为非链接转为搜索</string>
    <string name="browser_paste_open">粘贴打开</string>
    <string name="browser_settings">设置</string>
    <string name="browser_copy_link">复制链接</string>
    <string name="browser_download">下载</string>
    <string name="browser_share">截屏分享</string>
    <string name="browser_exit">退出</string>
    <string name="browser_load_home">加载主页</string>
    <string name="browser_home_set">设为主页</string>
    <string name="browser_hot_site">热门站点</string>
    <string name="browser_your_site">常访站点</string>
    <string name="browser_forward">分享到好友/群</string>
    <string name="browser_open_in__browseer">使用浏览器查看</string>
    <string name="browser_open_in_external_browseer">使用其他浏览器查看</string>
    <string name="browser_more">更多</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="browser_back">后退</string>
    <string name="browser_front">前进</string>
    <string name="browser_option">选项</string>
    <string name="browser_home">主页</string>
    <string name="browser_new_tab">窗口</string>
    <string name="browser_new_window">+窗口</string>
    <string name="browser_add_window">+窗口</string>
    <string name="browser_copy_window">复制窗口</string>
    <string name="browser_close_other_window">关闭其它</string>
    <string name="close">关闭</string>
    <string name="app_server_config">配置</string>
    <string name="app_login_auto">一键登陆</string>
    <string name="go_into">进入</string>
    <string name="action_settings">设置</string>
    <string name="update_time">更新于</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="head_photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="fill_empty"></string>
    <string name="youkes_number">优分享浏览器号:</string>
    <string name="youkes_number_search">优分享浏览器号</string>
    <string name="gender">性别</string>
    <string name="unknown">未知</string>
    <string name="sign">签名</string>
    <string name="sign_hint">请输入签名</string>
    <string name="hello_world">Hello world!</string>
    <string name="miui_font_family">miui</string>
    <string name="confirm_dialog_edittext_hint">说些什么</string>
    <string name="tab_view_name">EC_TAB_NAME</string>
    <string name="main_title">沟通</string>
    <string name="main_msg">消息</string>
    <string name="main_friend">朋友</string>
    <string name="friend_circle">朋友圈</string>
    <string name="my_favorite">我的收藏</string>
    <string name="space">分享</string>
    <string name="space_my">我的分享</string>
    <string name="topic_circle">话题圈</string>
    <string name="creative_read">阅读</string>
    <string name="creative">创作</string>
    <string name="user">用户</string>
    <string name="hobby_circle">兴趣圈</string>
    <string name="hobby_circle_select">选择兴趣圈</string>
    <string name="page_select_prompt">page_select_prompt</string>
    <string name="hint_chapter_go">跳到章节</string>
    <string name="chapter_jump">跳到章节</string>
    <string name="chapter_prev">前章</string>
    <string name="chapter_next">后章</string>
    <string name="server_error">服务器错误</string>
    <string name="page_prev">上页</string>
    <string name="page_next">下页</string>
    <string name="hint_search_article">下页</string>
    <string name="filter">筛选</string>
    <string name="focus">关注</string>
    <string name="focus_cancel">取消关注</string>
    <string name="read">阅读</string>
    <string name="novel">小说</string>
    <string name="comic">漫画</string>
    <string name="novel_add">添加小说</string>
    <string name="novel_add_chapter">添加章节</string>
    <string name="news">新闻</string>
    <string name="news_sufix">的新闻</string>
    <string name="news_my">我的新闻</string>
    <string name="video_upload">上传视频</string>
    <string name="footprint_upload">上传足迹</string>
    <string name="video_cloud_upload">上传视频到云盘</string>
    <string name="video_my">我的视频</string>
    <string name="post_news">发布新闻</string>
    <string name="note_sufix">的文章</string>
    <string name="topic_circle_name">话题圈名</string>
    <string name="topic_circle_my">我的话题圈</string>
    <string name="topic_my">我的话题</string>
    <string name="hint_text">文本</string>
    <string name="topic_circle_name_empty">话题圈名为空</string>
    <string name="main_contact">通讯录</string>
    <string name="map">地图</string>
    <string name="video">视频</string>
    <string name="book">图书</string>
    <string name="book_share">图书分享</string>
    <string name="movie_share">电影分享</string>
    <string name="buy">购买</string>
    <string name="share">分享</string>
    <string name="share_web_page_simple">分享</string>
    <string name="edit">编辑</string>
    <string name="edit_web">编辑网页</string>
    <string name="manage">管理</string>
    <string name="edit_site_prefix">编辑站点:</string>
    <string name="share_to_social">社交分享</string>
    <string name="share_to_qq_friend">分享给QQ朋友</string>
    <string name="share_to_qq_zone">分享到QQ空间</string>
    <string name="share_to_weixin_friend">分享给微信朋友</string>
    <string name="share_to_weixin_circle">分享到微信朋友圈</string>
    <string name="share_to_topic_circle">分享到兴趣圈</string>
    <string name="share_to">分享到</string>
    <string name="topic">话题</string>
    <string name="third_party_login">社交登录</string>
    <string name="community">社区</string>
    <string name="share_pic">分享到图片</string>
    <string name="share_my">我的分享</string>
    <string name="share_circle">分享到朋友圈</string>
    <string name="chat_send_img">发送图片</string>
    <string name="share_public">分享到图片</string>
    <string name="share_goods">分享到商品</string>
    <string name="share_news">分享到新闻</string>
    <string name="save_pic">保存图片</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="save_fail_title">保存失败,标题太短</string>
    <string name="sendto_friend">发送给朋友</string>
    <string name="share_weixin_circle">分享到微信空间</string>
    <string name="share_weixin_friend">发送给微信朋友</string>
    <string name="share_friend">发送给朋友</string>
    <string name="share_from">分享自</string>
    <string name="topic_circle_add">创建兴趣圈</string>
    <string name="topic_add">发起话题</string>
    <string name="topic_reply">回复话题</string>
    <string name="topic_prefix">话题:</string>
    <string name="reply">回复</string>
    <string name="bind_qq">绑定QQ并登录</string>
    <string name="topic_share_my">我的话题圈</string>
    <string name="browser_input_hint">搜索或输入网址</string>
    <string name="browser">浏览器</string>
    <string name="browser_no_back">没有后退网页了</string>
    <string name="browser_no_forward">没有前进网页了</string>
    <string name="pubplatform">公共平台</string>
    <string name="pubnumber">定阅号</string>
    <string name="more">更多</string>
    <string name="more_discover">更多发现</string>
    <string name="appstore">应用</string>
    <string name="app_down">应用下载</string>
    <string name="file">文件</string>
    <string name="file_down">文件下载</string>
    <string name="file_upload">文件上传</string>
    <string name="file_upload_video">上传视频</string>
    <string name="file_upload_image">上传图片</string>
    <string name="file_upload_docs">上传文档</string>
    <string name="file_upload_audio">上传音频</string>
    <string name="app">应用</string>
    <string name="main_group">群组</string>
    <string name="search">搜索</string>
    <string name="group">群组</string>
    <string name="pic">图片</string>
    <string name="reach_max_pics">达到最多上传图片数</string>
    <string name="image_set">图集</string>
    <string name="pic_circle">图片圈</string>
    <string name="link">链接</string>
    <string name="goods">商品</string>
    <string name="site">站点</string>
    <string name="site_add">创建站点</string>
    <string name="share_video">分享到视频</string>
    <string name="creative_works_add">创作作品</string>
    <string name="play_video">播放视频</string>
    <string name="shop">店铺</string>
    <string name="same_city">同城</string>
    <string name="campus">校园</string>
    <string name="travel">旅行</string>
    <string name="travel_spot">景点</string>
    <string name="travel_note">游记</string>
    <string name="movie">电影</string>
    <string name="pubno">公众号</string>
    <string name="fav">收藏</string>
    <string name="fav_web_image">收藏图片</string>
    <string name="pic_upload">上传图片</string>
    <string name="pic_my">我的图片</string>
    <string name="pic_album">图片专辑</string>
    <string name="goods_my">我的商品</string>
    <string name="goods_album">商品专辑</string>
    <string name="goods_my_album">我的商品专辑</string>
    <string name="goods_my_private">我的私有商品</string>
    <string name="site_my">我的站点</string>
    <string name="site_suffix">的站点</string>
    <string name="network_waste">网络流量浪费</string>
    <string name="play_ptt">播放语音</string>
    <string name="pic_my_private">我的私有图片</string>
    <string name="pic_my_album">我的专辑</string>
    <string name="album">专辑</string>
    <string name="album_name">专辑名</string>
    <string name="share_private">私藏</string>
    <string name="create_album">创建专辑</string>
    <string name="choose_album">选择专辑</string>
    <string name="tags_add">添加标签</string>
    <string name="img_add">添加图片</string>
    <string name="cover_set">设置封面</string>
    <string name="tags">标签</string>
    <string name="add">添加</string>
    <string name="add_shortcut">添加快捷方式</string>
    <string name="add_article">添加文章</string>
    <string name="article">文章</string>
    <string name="article_my">我的文章</string>
    <string name="select_pic">选择图片</string>
    <string name="finish">完成</string>
    <string name="empty"></string>
    <string name="exit">退出</string>
    <string name="action_share">分享页面</string>
    <string name="action_history">历史记录</string>
    <string name="action_hotsite">热门站点</string>
    <string name="action_bookmarks">书签列表</string>
    <string name="action_add_bookmark">添加书签</string>
    <string name="settings">设置</string>
    <string name="action_find">页内搜索</string>
</resources>